--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://billwang80.github.io/im-bill/</title>
-<meta http-equiv="refresh" content="0; URL=https://billwang80.github.io/im-bill/">
-<link rel="canonical" href="https://billwang80.github.io/im-bill">
+<title>Redirecting to https://billwang80.github.io/hello-everyone/</title>
+<meta http-equiv="refresh" content="0; URL=https://billwang80.github.io/hello-everyone/">
+<link rel="canonical" href="https://billwang80.github.io/hello-everyone">
