--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to https://billwang80.github.io/welcome/</title>
-<meta http-equiv="refresh" content="0; URL=https://billwang80.github.io/hello-everyone/">
-<link rel="canonical" href="https://billwang80.github.io/hello-everyone">
+<meta http-equiv="refresh" content="0; URL=https://billwang80.github.io/welcome/">
+<link rel="canonical" href="https://billwang80.github.io/welcome">
